--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Endgame Spoiler Blocker",
+  "name": "Spoiler Blocker For Endgame ",
   "description": "This extension indescriminately blocks all mentions of Endgame characters and plotlines in an attempt to not have my life ruined.",
   "version": "0.1",
   "author": "Shreya Gupta / Shubhank Saxena",
